Project07Two-tier-app-with proxy/modules/ec2/main.tf
resource "aws_security_group" "dockerdemo" {
  name        = "dockerdemo"
  description = "Allow TLS inbound traffic and all outbound traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "app_server" {
  ami             = var.ami
  instance_type   = var.instance_type
  key_name        = var.key_name
  user_data       = file("file.sh")
  vpc_security_group_ids = [aws_security_group.dockerdemo.id]

  tags = {
    Name = var.instance_name
  }
}
